--- a/Dissertation/Work_structured/Dissertation/conclusion.tex
+++ b/Dissertation/Work_structured/Dissertation/conclusion.tex
@@ -1,11 +1,5 @@
 \chapter*{Заключение}						% Заголовок
 \addcontentsline{toc}{chapter}{Заключение}	% Добавляем его в оглавление
-
-%% Согласно ГОСТ Р 7.0.11-2011:
-%% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
-%% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
-%% Поэтому имеет смысл сделать эту часть общей и загрузить из одного файла в автореферат и в диссертацию:
-
 В приведенной работе был рассмотрен тандем управляющих систем, управление в которых осуществляется по циклическому алгоритму и алгоритму с продлением. Основные результаты работы заключаются в следующем.
 
     \begin{enumerate}
@@ -16,5 +10,12 @@
 %        \item Разработана имитационная модель для изучения исходной системы и написана программа ее реализующая.
         \item На основе имитационной модели расширены результаты, полученные теоретически.
     \end{enumerate}
+Для дальнейшего исследования можно выделить следующие направления и задачи.
+\begin{enumerate}
+    \item Найти необходимые и достаточные условия существования стационарного распределения для марковской цепи, включающей в себя состояние обслуживающего устройства и четыре очереди и описывающей всю систему целиком.
+    \item Провести более глубокое изучение вида кривой равных загрузок для определения оптимальных значений параметров системы с точки зрения средневзвешенного времени пребывания требования.
+    \item Расширить класс рассматриваемых графов переходов для обслуживающего устройства.
+    \item Рассмотреть систему с б\'{о}льшим числом входных потоков, что соответствует, например, нескольким подряд идущим перекресткам. В идеале нужно придти к модели, содержащей произвольное число таких перекрестков.
+\end{enumerate}
 
 
