--- a/Dissertation/Work_structured/Dissertation/introduction.tex
+++ b/Dissertation/Work_structured/Dissertation/introduction.tex
@@ -20,7 +20,7 @@
 %С точки зрения фундаментального образования, теория массового обслуживания также является неотъемлимой и устоявшейся ветвью исследования операций. Классические учебники (см. \cite{Taha, Carter, Murthy, Hillier} и др.) по исследованию операций включают в себя разделы про марковские цепи, случайные процессы и теорию массового обслуживания (теорию очередей). Наряду с базовыми понятиями линейного программирования и теории игр в учебниках вводится марковская цепь, определяются основные классы ее состояний и рассматриваются вопросы эргодичности. Обобщения марковской цепи строятся посредством случайных  процессов: марковских или процессов рождения и гибели. Далее этот материал обычно применяется в разделе теории массового обслуживания. Инструменты для аппробации построенных вероятностных моделей, как правило, предоставляются в учебниках по исследованию операций в разделе с названием <<имитационное моделирование>> (<<simulation>>).
 С каждым годом количество задач, в которых требуется применение математических методов для выбора некоторого оптимального решения, постоянно растет. Создание автоматизированных систем практически невозможно без предварительного исследования управляемого процесса методами математического моделирования. Подобного рода проблемы попадают в сферу ответственности такой науки как исследование операций. Однако предмет изучения данной дисциплины весьма широк и в разных источниках трактуется по-разному. Например, книга Е.С.~Вентцель~\cite{Ventcel} начинается со следующего объяснения термина <<исследование операций>>: <<Под этим термином мы будем понимать применение математических, количественных методов для обоснования решений во всех областях целенаправленной человеческой деятельности>>. Далее в книге~Е.С.~Вентцель раскрывается понятие <<решения>> как выбор действия для достижения конкретной цели с приминением того или другого математического аппарата. В качестве примера задачи исследования операций в этой книге приводится задача из теории очередей: библиотечное обслуживание. В фондах библиотеки имеется большое количество литературы разной тематики и для удовлетворения запросов абонентов нужно разработать оптимальную схему обслуживания.
 
-В книге~\cite{Hillier} появление научной отрасли под названием  <<исследование операций>>  связывается с созданием больших корпораций, управление которыми породило качественно новые задачи для руководства. Отдельные части компаний становятся крупнее, обрастают своими целями, нетривиальным образом коррелируемыми с общей целью компании. С этим связана проблема выделения ресурсов для того или иного подразделения компании для достижения наиболее выгодного существования всей компании в целом. Так или иначе, на сегодняшний момент существует множество литературы, в которой дается последовательное изложение современного состояния исследования операций и, в том числе, ее важной подобласти, теории очередей (см., например, книги~\cite{Taha, Carter, Murthy, Hillier, Encylc, Ventcel, Eltarenko}).
+В книге~\cite{Hillier} появление научной отрасли под названием  <<исследование операций>>  связывается с созданием больших корпораций, управление которыми породило качественно новые задачи для руководства. Отдельные части компаний становятся крупнее, обрастают своими целями, нетривиальным образом коррелируемыми с общей целью компании. С этим связана проблема выделения ресурсов для того или иного подразделения компании для достижения наиболее выгодного существования всей компании в целом. Так или иначе, на сегодняшний момент существует множество литературы, в которой дается последовательное изложение современного состояния исследования операций и, в том числе, ее важной подобласти~--- теории очередей (см., например, книги~\cite{Taha, Carter, Murthy, Hillier, Encylc, Ventcel, Eltarenko}).
 
 Теория массового обслуживания (теория очередей) предоставляет математический аппарат для анализа систем, в которых имеется операция по обслуживанию (<<обработка>>) некоторых объектов при наличии случайных факторов. При этом тип обслуживания и самих объектов не имеет значения, что делает область применения этой дисциплины достаточно широкой: системы связи, автоматические линии производства, системы медицинского обслуживания, системы управления транспорта и т.д.  В роли объектов могут выступать, например, абоненты, заявки, требования.
 
@@ -28,7 +28,7 @@
 
 % Теория вероятностей начала зарождаться в XVII веке благодаря азартным играм и случайности, заложенной в них. Первые математические модели таких игр были построены математиками П.~Ферма и Б.~Паскаль в  переписке друг с другом. В решении задач они приблизились к таким понятиями как вероятность, математическое ожидание, теорема сложения и умножения вероятностей, хотя явно  их  не вводили. Значительный толчок в развитии теории вероятностей осуществил Я.~Бернулли. Сформулировав и доказав закон больших чисел, он ввел в научный обиход понятие вероятности.
 
-Первые исследования в области систем массового обслуживания были сделаны  А.К.~Эрлангом \cite{Erlang:1909,Erlang:1917}, Ф.В.~Йохансеном \cite{Johannsen} и Ф.~Поллачеком \cite{Pollaczek:1934}. Из физических соображений ими были составлены интегральные и дифференциальные уравнения для функции распределения числа занятых линий  и времени  ожидания на телефонной станции. Найденные формулы создали базу для будущего развития теории. Дальнейший вклад в развитие теории очередей внесли следующие зарубежные и отечественные ученые: К.~Пальм, Д.Дж.~Кендалл, Д.~Линдли, Л.~Такач, Д.Р.~Кокс, У.Л.~Смит, Т.Л.~Саати, Л.~Клейнрок,  Н.Т.Дж.~Бейли,  А.Н.~Колмогоров, А.Я.~Хинчин, Б.В.~Гнеденко, И.Н.~Коваленко,  С.Н.~Бернштейн, Н.П.~Бусленко, А.А.~Боровков, В.С.~Королюк, Г.П.~Башарин, Г.П.~Климов, Ю.В.~Прохоров, А.Д.~Соловьев,  Б.А.~Севастьянов и др. Краткое представление об истории вопроса можно составить, ознакомившись с монографиями, журнальными обзорами, например, \cite{Borovkov, Bocharov:1995, GnedenkoKovalenko, KoksSmith, Kovalenko:1963, asmussen, kalashnikov}. Технологический прогресс конца XX века привел к развитию таких направлений, как сети массового обслуживания и тандемы систем массового обслуживания \cite{ivnickii, jackson, reich}. Сегодня класс задач, к которым применимы методы теории очередей, становится еще шире: медицинское и банковское обслуживание, управление информационным и транспортным трафиками и т.п. (см., например, работы \cite{dudin:2011, farhadov, Haight:1963, haidemann, raghavan, rogiest}).
+Первые исследования в области систем массового обслуживания были сделаны  А.К.~Эрлангом \cite{Erlang:1909,Erlang:1917}, Ф.В.~Йохансеном \cite{Johannsen} и Ф.~Поллачеком \cite{Pollaczek:1934}. Из физических соображений ими были составлены интегральные и дифференциальные уравнения для функции распределения числа занятых линий  и времени  ожидания на телефонной станции. Найденные формулы создали базу для будущего развития теории. Дальнейший вклад в развитие теории очередей внесли следующие зарубежные и отечественные ученые: К.~Пальм, Д.Дж.~Кендалл, Д.~Линдли, Л.~Такач, Д.Р.~Кокс, У.Л.~Смит, Т.Л.~Саати, Л.~Клейнрок,  Н.Т.Дж.~Бейли,  А.Н.~Колмогоров, А.Я.~Хинчин, Б.В.~Гнеденко, И.Н.~Коваленко,  С.Н.~Бернштейн, Н.П.~Бусленко, А.А.~Боровков, В.С.~Королюк, Г.П.~Башарин, Г.П.~Климов, Ю.В.~Прохоров, А.Д.~Соловьев,  Б.А.~Севастьянов и др. Краткое представление об истории вопроса можно составить, ознакомившись с монографиями, журнальными обзорами, например, \cite{Borovkov, Bocharov:1995, GnedenkoKovalenko, KoksSmith, Kovalenko:1963, asmussen, kalashnikov}. Технологический прогресс конца XX века привел к развитию таких направлений, как сети массового обслуживания и тандемы систем массового обслуживания \cite{ivnickii, jackson, reich,Saratov}. Сегодня класс задач, к которым применимы методы теории очередей, становится еще шире: медицинское и банковское обслуживание, управление информационным и транспортным трафиками и т.п. (см., например, работы \cite{dudin:2011, farhadov, Haight:1963, haidemann, raghavan, rogiest}).
  
 При изучении любой реальной системы математическими методами первостепенным является этап построения модели. 
 %Так, Б.~Паскаль и П.~Ферма при решении первых вероятностных задач обходились без самого понятия <<вероятности>> и строили математическую модель в терминах количества <<благоприятствующих>> и <<неблагоприятствующих>> исходов (см.~\cite{Gnedenko}). Само понятие <<вероятности>> как числа, заключенного между $0$ и $1$, было введено Я.~Бернулли при формулировке и выводе закона больших чисел. В контексте управляемых систем массового обслуживания, первые модели А.К.~Эрланга и Ф.~Поллячека были построены на языке дифференциальных и интегральных уравнений для плотностей некоторых случайных величин и вероятностей изучаемых событий.
@@ -38,7 +38,7 @@
 
 На основе классического подхода был произведен анализ многих видов систем массового обслуживания. Во-первых, это системы с одним, несколькими, а также неограниченным числом обслуживающих приборов (см.~\cite{afanasyeva, tatashev, brumelle}). Далее рассматривались как системы с пуассоновскими входными потоками требований, так и системы с более сложной структурой, например, дважды стохастические входные потоки (см.~\cite{dudin:1997, Grandell:1976, Neuts:1979}), то есть допускающие изменение мгновенной интенсивности во времени в соответствии с заданным стохастическим процессом. В некоторых системах для требований предполагается возможность  уходить на <<орбиту>> в случае отсутствия свободных приборов, то есть требования через случайное время после первой попытки запрашивают обслуживание снова (см.~\cite{fallin}). 
 
-Также известны и достаточно сложные технические системы, в которых требования неоднородны и потоки требований разных типов оказываются конфликтными. Конфликтность означает, что в каждый момент времени могут обслуживаться требования не более чем из одного потока. Примерами таких систем являются пересечение транспортных магистралей~--- перекрестки, взлетно-посадочные комплексы в аэропортах, локальные вычислительные сети и сети передачи данных. В~конфликтных системах обслуживания обслуживающее устройство с необходимостью выполняет функцию управления потоками. В существующей литературе алгоритмы управления конфликтными потоками делятся на два типа: независящие от состояния системы (см. работы \cite{Darroch:1964,Neimark:1966}) и зависящие от нее  (см. работы \cite{Neimark:1968, Fedotkin:1976, Ferguson:1985, Takagi:1985}). В частности, в работе Ю.И.~Неймарка и М.А.~Федоткина \cite{Neimark:1966} строится модель перекрестка, для которого длительности сигналов светофора фиксированы, и находятся вероятностные характеристики стационарного режима. В работе \cite{Neimark:1968} авторы изучают алгоритм, учитывающий информацию о количестве машин в очередях в момент принятия решения. Обобщение на случай произвольного числа конфликтных потоков впервые было осуществлено в статье \cite{Yakushev:1990}.
+Также известны и достаточно сложные технические системы, в которых требования неоднородны и потоки требований разных типов оказываются конфликтными. Конфликтность означает, что в каждый момент времени могут обслуживаться требования не более чем из одного потока. Примерами таких систем являются пересечение транспортных магистралей~--- перекрестки, взлетно-посадочные комплексы в аэропортах, локальные вычислительные сети и сети передачи данных. В~конфликтных системах обслуживания обслуживающее устройство с необходимостью выполняет функцию управления потоками. В существующей литературе алгоритмы управления конфликтными потоками делятся на два типа: независящие от состояния системы (см. работы \cite{Darroch:1964,Holland:1, Holland:2, Holland:3, Holland:4, Neimark:1966}) и зависящие от нее  (см. работы \cite{Neimark:1968, Fedotkin:1976, Ferguson:1985, Takagi:1985}). В частности, в работе Ю.И.~Неймарка и М.А.~Федоткина \cite{Neimark:1966} строится модель перекрестка, для которого длительности сигналов светофора фиксированы, и находятся вероятностные характеристики стационарного режима. В работе \cite{Neimark:1968} авторы изучают алгоритм, учитывающий информацию о количестве машин в очередях в момент принятия решения. Обобщение на случай произвольного числа конфликтных потоков впервые было осуществлено в статье \cite{Yakushev:1990}.
 
  
   
@@ -48,7 +48,7 @@
 
 В связи со стремительным ростом числа машин в современных городах, все больший интерес стала представлять теория потоков транспортных средств. Результаты ранних исследований по этой тематике собраны, например, в книгах \cite{Haight:1963, Drew:1968,Inose}. Потоки машин обычно моделируются с помощью традиционных стохастических потоков событий, весьма полно изученных в классической теории массового обслуживания.  Динамика, обусловленная возможностью съезда машин с трассы, рассматривается в работах \cite{AfanasyevaBulinskaya:2013:1,AfanasyevaBulinskaya:2010,AfanasyevaBulinskaya:2013:2}. Основным объектом изучения в этих работах является плотность потока машин как функция от расстояния, на основе которой делаются выводы о пропускной способности перекрестков.
 
-Управление уличным движением с помощью светофоров привело к исследованиям систем массового обслуживния с переменной структурой обслуживающего устройства. Работы М.Г.~Теплицкого \cite{Teplicki:1968, Teplicki:1969} содержат одни из первых исследований в этом направлении. М.А.~Федоткин и Ю.И.~Неймарк в своих работах \cite{Neimark:1966, Fedotkin:1969}  рассматривают управление потоками автомобилей на перекрестке, используя аппарат математической кибернетики и теории массового обслуживания. В данной системе путем изменения сигнала автомата-светофора возможно управлять режимами обслуживания входных потоков. Был найден оптимальный набор параметров управления для автомата-светофора. В работе~\cite{Neimark:1985} анализ системы проводится с применеием методов имитационного моделирования, поскольку аналитическое исследование вызывает большие сложности. В более поздних работах рассматривались, например, такие алгоритмы изменения состояния обслуживающего устройства, как циклический алгоритм (работы \cite{Proidakova:2008, Fedotkin:2014, Zorin:2014}), алгоритм с петлей (например, работа \cite{Zorin:2017}) и алгоритм с упреждением (например, работа \cite{Kuvykina:1990}). Адаптивные алгоритмы управления конфликтными потоками рассматривались в работах \cite{Kudelin:1996, Litvak:2000}. В контексте решения задач более специфичных для области исследования операций отметим следующие публикации: в работе \cite{Dunne:1964} исследуется линейный управляющий алгоритм, в работе \cite{Gordon:1969}~--- адаптивный алгоритм с информацией о размере очередей, в работе \cite{Day2012}~--- гибридный алгоритм (алгоритм с упреждением и алгоритм с обратной связью), в работах \cite{Vasilakos:1990,Cotton:1995,Mason:1999,Kokkonis:2016} рассматриваются комбинации нескольких адаптивных алгоритмов.
+Управление уличным движением с помощью светофоров привело к исследованиям систем массового обслуживния с переменной структурой обслуживающего устройства. Работы М.Г.~Теплицкого \cite{Teplicki:1968, Teplicki:1969} содержат одни из первых исследований в этом направлении. М.А.~Федоткин и Ю.И.~Неймарк в своих работах \cite{Neimark:1966, Fedotkin:1969}  рассматривают управление потоками автомобилей на перекрестке, используя аппарат математической кибернетики и теории массового обслуживания. В данной системе путем изменения сигнала автомата-светофора возможно управлять режимами обслуживания входных потоков. Был найден оптимальный набор параметров управления для автомата-светофора. В работе~\cite{Neimark:1985} анализ системы проводится с применеием методов имитационного моделирования, поскольку аналитическое исследование вызывает большие сложности. В более поздних работах рассматривались, например, такие алгоритмы изменения состояния обслуживающего устройства, как циклический алгоритм (работы \cite{Proidakova:2008, Fedotkin:2014, Zorin:2014, DCCN2016:NAZAROV}), алгоритм с петлей (например, работа \cite{Zorin:2017}) и алгоритм с упреждением (например, работа \cite{Kuvykina:1990}). Адаптивные алгоритмы управления конфликтными потоками рассматривались в работах \cite{Kudelin:1996, Litvak:2000}. В контексте решения задач более специфичных для области исследования операций отметим следующие публикации: в работе \cite{Dunne:1964} исследуется линейный управляющий алгоритм, в работе \cite{Gordon:1969}~--- адаптивный алгоритм с информацией о размере очередей, в работе \cite{Day2012}~--- гибридный алгоритм (алгоритм с упреждением и алгоритм с обратной связью), в работах \cite{Vasilakos:1990,Cotton:1995,Mason:1999,Kokkonis:2016} рассматриваются комбинации нескольких адаптивных алгоритмов.
 
 С самых истоков становления теории массового обслуживания перед исследователями, среди прочего, стояла оптимизационная задача. Так, например, в упомянутой выше работе А.К.~Эрланга ставилась задача поиска оптимального (минимального) числа телефонных линий для удовлетворительного обслуживания абонентов. Как отмечалось выше, в терминах дисциплины исследования операций действие по обслуживанию требований является <<операцией>> над некоторыми абстрактными объектами (абонентами, заявками, требованиями), эффективность осуществления которой является одним из предметов исследования. При этом операция по обслуживанию зачастую выполняется под действием как детерминированных, так и случайных факторов. В качестве критериев эффективности операции обслуживания обычно выступают вероятность простоя обслуживающих устройств, среднее время пребывания требования в системе, вероятность отказа устройства, средняя длина очереди, среднее количество занятых устройств и т.д. С учетом названных критериев формируется конечный функционал, оптимизация которого и является главной целью. Примерами работ, в которых задача теории массового обслуживания ставится в терминах исследования операций, являются \cite{Bailey:1957, Flagle:1962, Buslenko:1968}.
 %Taha, Carter, Murthy
@@ -65,7 +65,7 @@
 
 Качественно новая методика к построению математических моделей управляющих систем массового обслуживания была предложена М.А.~Федоткиным в работах \cite{Fedotkin:1996, fedotkin:1998} и существенно доработана А.В.~Зориным в работах \cite{Zorin:2008:1, Zorin:2014, ZorineDissertation} и \cite{Zorin:2017}. Методика основана на понятии абстрактной управляющей системы, введеном А.А.~Ляпуновым и С.В.~Яблонским в работе \cite{Lyapunov}, и также носит название кибернетического подхода. Основными принципами подхода являются: 1) наблюдение за системой происходит в дискретные моменты времени; 2) управляющая система разделяется на логические блоки, между которыми определяются функциональные и стохастические связи при их взаимодействии во времени; 3) описание блоков системы должно быть нелокальным. В качестве блоков управляющей системы выделяют следующие: входные полюса, внешняя память, блок по переработке внешней памяти, внутренняя память, блок по переработке внутренней памяти, выходные полюса и внешняя среда. Некоторые из перечисленных блоков могут быть опущены при исследовании вследствие их вырожденности. Так, например, в работе \cite{Novgorod:2011} случайная среда имеет всего одно состояние, а в работе \cite{Zorin:2008:1}~--- несколько, поэтому блок со случайной средой во второй работе учитывается, а в первой~--- нет. Рассмотрение систем с позиции абстрактных управляющих систем Ляпунова--Яблонского позволяет исследовать их с единой позиции: разделяя системы на составные блоки, описывая каждый из них и вводя функционально-статистические связи между ними. Это существенно упрощает анализ уже известных систем, а также делает возможным исследование новых и более сложных. Кроме того, стало более естественным независимое рассмотрение подсистем  и изучение их свойств отдельно от основной модели. Так, в работах \cite{FedotkinRachinskaya, Fedotkin:2012} исследуется процесс формирования автомобильных <<пачек>> на дорогах как независимая система массового обслуживания. А в работах \cite{Proidakova:2008,Fedotkin:2009} изучались выходящие потоки систем массового обслуживания с циклическим алгоритмом управления входными пуассоновскими потоками и потоками Гнеденко--Коваленко. 
 
-Аппарат абстрактных управляющих систем Ляпунова--Яблонского был удачно применен к анализу неклассических конфликтных управляющих систем массового обслуживания А.В.~Зориным в работах \cite{Zorin:2003,Zorin:2006,Zorin:2008:2,Zorin:2009:1,Zorin:2009:2,Zorin:2010:1,Zorin:2010:2,Zorin:2011:1,Zorin:2011:2,Zorin:2013 ,Zorin:2014:1,Zorin:2014:2,Zorin:2012:1, Zorin:2014:3}. В частности, была построена математическая модель для системы управления неординарными конфликтными потоками, формируемыми во внешней среде, в классе алгоритмов с переналадками и разделением времени, а также циклических алгоритмов с продлением. Была построена модель для системы управления неординарными рекуррентными потоками в классе циклических алгоритмов при наличии переналадок. Кроме того, отметим, что исследовать систему последовательных перекрестков с различными усложнениями стало возможным только с точки зрения абстрактных управляющих систем Ляпунова--Яблонского. Так, модель тандема перекрестков с немгновенным перемещением машин между ними была впервые предложена в работах~\cite{Zorin:2010:3, Zorin:2011:2, Zorin:2012:2}. В рассматриваемых там моделях динамика перемещения машин от одного перекрестка к другому задается бернулиевской случайной величиной: каждая машина с некоторой фиксированной вероятностью $0<p<1$ успевает доехать до следующего перекрестка и с противоположной вероятностью $1-p$ остается <<между>> ними. В работах автора \cite{ Minsk2015, Dm2015, Penza2017, ORM2018, Tomsk2017, ITMM2019, DCCN2015, DCCN2016:1, DCCN2016:2, DCCN2016:3,  DCCN2017, vestnikTvGU, vestnikVGAVT2, UBS} с точки зрения управляющей системы Ляпунова--Яблонского построена и исследована математическая модель тандема перекрестков с немгновенным перемещением автомобилей и циклическим алгоритмом управления светофором с продлением. Поскольку многие реальные системы могут быть представлены в виде конфликтной управляющей системы Ляпунова--Яблонского, то исследования в данной области являются актуальными.
+Аппарат абстрактных управляющих систем Ляпунова--Яблонского был удачно применен к анализу неклассических конфликтных управляющих систем массового обслуживания А.В.~Зориным в работах \cite{Zorin:2003,Zorin:2006,Zorin:2008:2,Zorin:2009:1,Zorin:2009:2,Zorin:2010:1,Zorin:2010:2,Zorin:2011:1,Zorin:2011:2,Zorin:2013 ,Zorin:2014:1,Zorin:2014:2,Zorin:2012:1, Zorin:2014:3}. В частности, была построена математическая модель для системы управления неординарными конфликтными потоками, формируемыми во внешней среде, в классе алгоритмов с переналадками и разделением времени, а также циклических алгоритмов с продлением. Была построена модель для системы управления неординарными рекуррентными потоками в классе циклических алгоритмов при наличии переналадок. Кроме того, отметим, что исследовать систему последовательных перекрестков с различными усложнениями стало возможным только с точки зрения абстрактных управляющих систем Ляпунова--Яблонского. Так, модель тандема перекрестков с немгновенным перемещением машин между ними была впервые предложена в работах~\cite{Zorin:2010:3, Zorin:2011:2, Zorin:2012:2}. В рассматриваемых там моделях динамика перемещения машин от одного перекрестка к другому задается бернулиевской случайной величиной: каждая машина с некоторой фиксированной вероятностью $0<p<1$ успевает доехать до следующего перекрестка и с противоположной вероятностью $1-p$ остается <<между>> ними. В работах автора \cite{ Minsk2015, Dm2015, Penza2017, ORM2018, Tomsk2017, ITMM2019, MKSM2019, vestnikSGU, DCCN2015, DCCN2016:1, DCCN2016:2, DCCN2016:3,  DCCN2017, vestnikTvGU, vestnikVGAVT2, UBS} с точки зрения управляющей системы Ляпунова--Яблонского построена и исследована математическая модель тандема перекрестков с немгновенным перемещением автомобилей и циклическим алгоритмом управления светофором с продлением. Поскольку многие реальные системы могут быть представлены в виде конфликтной управляющей системы Ляпунова--Яблонского, то исследования в данной области являются актуальными.
 
 Аппарат абстрактных управляющих систем также облегчает асимптотический анализ поведения систем обслуживания. К более ранним работам, в которых исследовалось предельное поведение операционных характеристик (число требований в системе, время ожидания и т.п.) классическими методами, можно отнести работы \cite{Davis:1995, Borovrkov:1964, Borovrkov:1980, Afanasieva:2011,Afanasieva:2008, Whitt:1971, Whitt:1982}. Также представляют большой интерес работы, в которых определяются условия существования стационарного распределения, например, \cite{Loynes:1962, Davis:1972, Whitt:2014, Choudhury:1995}. Основными известными методами здесь принято считать прямое решение уравнений стационарности, применение теоремы эргодичности Мустафы, применение критерия Найквиста-Михайлова. Отличительными особенностями этих методов является отсутствие универсальной последовательности действий при применении их к разным типам исследуемых систем. Существенно новым методом в этом вопросе является итеративно-мажорантный метод, впервые примененный М.А.~Федоткиным в контексте абстрактных управляющих систем обслуживания (см.~\cite{Fedotkin:1988, Fedotkin:1989}). Отличительными особенностями метода являются относительно легкая проверяемость получаемых условий и алгоритмизованность. Данная методология была успешно применена в задаче исследования перекрестка с приоритетными потоками \cite{Proidakova:2007}, в задаче изучения системы со случайной внешней средой \cite{Zorin:2008:1}, в задаче адаптивного управления потоками \cite{LitvakDissertation} и др. Более глубоко метод был доработан в диссертации А.В.~Зорина \cite{ZorineDissertation}. 
 
@@ -86,7 +86,7 @@
 
 \input{common/characteristic} % Характеристика работы по структуре во введении и в автореферате не отличается (ГОСТ Р 7.0.11, пункты 5.3.1 и 9.2.1), потому её загружаем из одного и того же внешнего файла, предварительно задав форму выделения некоторым параметрам
 
-\textbf{Объем и структура работы.} Диссертация состоит из~введения, четырёх глав, заключения и библиографического списка использованной литературы. 
+\textbf{Объем и структура работы.} Диссертация состоит из~введения, четырёх глав, заключения и одного приложения. 
 %% на случай ошибок оставляю исходный кусок на месте, закомментированным
 %Полный объём диссертации составляет  \ref*{TotPages}~страницу с~\totalfigures{}~рисунками и~\totaltables{}~таблицами. Список литературы содержит \total{citenum}~наименований.
 %
@@ -97,12 +97,10 @@
  Список литературы содержит  
 \formbytotal{citenum}{наименован}{ие}{ия}{ий}.
 
-В разделе~1.1 задача управления системой ставится на содержательном уровне. На первом этапе задача формулируется в терминах теории массового обслуживания: описываются входные потоки, вид имеющихся очередей, обслуживающее устройство и т.п. Особое внимание уделяется описанию графа переходов обслуживающего устройства, имеющей нетривиальный характер. В качестве наглядной интерпретации системы приводится тандем перекрестков. 
+В разделе~1.1 главы~1 задача управления системой ставится на содержательном уровне. На первом этапе задача формулируется в терминах теории массового обслуживания: описываются входные потоки, вид имеющихся очередей, обслуживающее устройство и т.п. Особое внимание уделяется описанию графа переходов обслуживающего устройства, имеющей нетривиальный характер. В качестве наглядной интерпретации системы приводится тандем перекрестков. Далее (раздел~1.2) глава~1 продолжается  построением строгой математической модели системы. Данный этап является основополагающим для всего дальнейшего анализа.  При построении модели существенно используется понятийный аппарат абстрактных управляющих систем Ляпунова--Яблонского с соблюдением основных принципов: наблюдение за системой совершается в дискретные моменты времени,  строятся функциональные и вероятностные соотношения между блоками функционирования системы, а также описание блоков системы производится нелокально.
 
-Раздел~1.2 содержит построение строгой математической модели для системы, которая была представлена в предыдущем разделе. Данный этап является основополагающим для всего дальнейшего анализа.  При построении модели существенно используется аппарат абстрактных управляющих систем Ляпунова--Яблонского с соблюдением основных принципов: наблюдение за системой совершается в дискретные моменты времени,  строятся функциональные и вероятностные соотношения между блоками функционирования системы, а также описание блоков системы производится нелокально.
-
-Исследуемая в работе система характеризуется следующими объектами: одно обслуживающее устройство и четыре очереди. Последовательность \linebreak 
- $\{(\Gamma_i, \varkappa_{1,i}, \varkappa_{2,i}, \varkappa_{3,i},  \varkappa_{4,i}); i \geqslant 0\}$ служит математическим описанием этих объектов. Глава~2 посвящена тем результатам, которые удается получить для этой пятимерной последовательности, несмотря на ее сложность: доказана марковость этой последовательности, а также проведена классификация ее состояний по арифметическим свойствам переходных вероятностей. Эти результаты позволят в следующей главе доказать марковость и провести классификацию состояний для последовательностей, содержащих только часть из упомянутых пяти компонент.
+Исследуемая в работе система характеризуется следующими объектами: одно обслуживающее устройство, которое находится в момент времени $i\geqslant 0$ в состоянии $\Gamma_i$, и четыре очереди, количество требований в которых определяется числами $\varkappa_{1,i}$, $\varkappa_{2,i}$, $\varkappa_{3,i}$ и $\varkappa_{4,i})$, $i\geqslant 0$. Последовательность \linebreak 
+ $\{(\Gamma_i, \varkappa_{1,i}, \varkappa_{2,i}, \varkappa_{3,i},  \varkappa_{4,i}); i \geqslant 0\}$ служит математическим описанием этих объектов. Глава~2 посвящена доказательству  марковости этой последовательности, а также  классификации ее состояний по арифметическим свойствам переходных вероятностей. Эти результаты позволят в следующей главе доказать марковость и провести классификацию состояний для последовательностей, содержащих только часть из упомянутых пяти компонент.
 
 
 В главе~3 более подробно изучаются случайные последовательности, содержащие только часть очередей из последовательности $\{(\Gamma_i, \varkappa_i);  i \geqslant 0\}$. Исключение из рассмотрения нескольких компонент пятимерной марковской цепи позволяет найти достаточные, а в особом случае и необходимое условие существования стационарного распределения. Для нахождения условий стационарности используется хорошо зарекомендовавший себя итеративно-мажорантный метод, в котором последовательность математических ожиданий компонент цепи ограничивается последовательностью более простого вида.
