--- a/Dissertation/Work_structured/biblio/authorconferences.bib
+++ b/Dissertation/Work_structured/biblio/authorconferences.bib
@@ -54,7 +54,7 @@
   publisher = {МАКС Пресс},
   address  = {М.},
   year = {2017},
-  pages = {135-137},
+  pages = {135--137},
   language = {russian},
 }
 
