--- a/Dissertation/Work_structured/biblio/authorpapersVAK.bib
+++ b/Dissertation/Work_structured/biblio/authorpapersVAK.bib
@@ -12,7 +12,7 @@
 
 @ARTICLE{vestnikTvGU,
   author = {Кочеганов, В.М. and Зорин, А.В.},
-  title = { Достаточное условие существования стационарного режима очередей первичных требований в тандеме систем массового обслуживания},
+  title = {Достаточное условие существования стационарного режима очередей первичных требований в тандеме систем массового обслуживания},
   journal = {Вестник ТвГУ. Серия: Прикладная математика},
   year = {2018},
   number = {2},
@@ -31,8 +31,32 @@
   language = {russian},
 }
 
+@ARTICLE{vestnikSGU,
+  author = {Кочеганов, В.М.},
+  title = { Классификация состояний марковской цепи в модели тандема с циклическим управлением с продлением},
+  journal = {Известия Саратовского университета. Новая серия. Серия Математика. Механика. Информатика},
+    year = {2020},
+    volume = {20},
+  number = {2},
+  pages = {257--265},
+  language = {russian},
+}
 
 
+
+@inproceedings{MKSM2019,
+  author = {Кочеганов, В.М.},
+  title = {Анализ тандема систем
+массового обслуживания с циклическим управлением с продлением},
+  booktitle = {\textit{Теория вероятностей и ее применения}},
+  publisher = {Наука},
+  address  = {М.},
+  year = {2020},
+  pages = {169--170},
+  language = {russian},
+  volume = {65},
+  issue = {1},
+}
 
 
 
