--- a/Dissertation/Work_structured/common/characteristic.tex
+++ b/Dissertation/Work_structured/common/characteristic.tex
@@ -10,7 +10,7 @@
 
 
 
-{\novelty} Основные результаты являются новыми и состоят в следующем:
+{\novelty} Результаты диссертации являются новыми и заключаются в следующем:
 
 1. Впервые построена вероятностная модель тандема управляющих систем с немгновенным перемещением требований между ними, управление в которых осуществляется по циклическому алгоритму и алгоритму с продлением. В этой модели требования сначала поступают в первую систему на обслуживание по циклическому алгоритму, а затем немгновенно поступают во вторую систему на обслуживание по циклическому алгоритму с продлением. Немгновенность перемещения моделируется при помощи биномиальной случайной величины с параметром $p$, имеющим смысл вероятности перехода требования из одной системы в другую за определенный промежуток времени.
 %Построена строгая вероятностная модель тандема управляющих систем с немгновенным перемещением требований между ними, управление в которых осуществляется по циклическому алгоритму и алгоритму с продлением. 
@@ -36,22 +36,28 @@
 
 
 
-{\methods} Методология диссертационной работы базируется на представлении стохастических систем массового обслуживания в виде абстрактных управляющих систем Ляпунова--Яблонского. Применение аппарата управляющих систем позволяет выделить в изучаемых системах ключевые блоки, структурировать информацию о законах функционирования блоков и основных связях между ними. Для описания входных потоков был примен метод нелокального описания, что сделало возможным более глубокое математическое изучение рассматриваемых объектов. В работе используется аппарат теории вероятностей, теории массового обслуживания, исследования операций, теории управляемых марковских процессов, теории функций комплексного переменного. Также применяются методы математической статистики, матричных вычислений и теории систем линейных алгебраических уравнений. При разработке имитационных моделей использовался язык программирования C++. Для визуализации результатов некоторых численных исследований использовался язык Python.
+{\methods} 
+В диссертации применяется аппарат теории вероятностей, теории массового обслуживания, исследования операций, теории управляемых марковских процессов. Также применяются методы теории линейных отображений, математической статистики и теории функций комплексного переменного.
+ При реализации имитационной модели на компьютере использовались языки программирования C++, Python.
 
+Методология диссертации основывается на   представлении стохастических систем массового обслуживания в виде абстрактных управляющих систем Ляпунова--Яблонского. Использование данной методологии  позволяет разделить исследуемые системы на составные части (блоки), описать эти части математически,  задать правила их функционирования и взаимодействия между собой.
+Для описания входных потоков было примено нелокальное описание.
+%, что сделало возможным более глубокое математическое изучение рассматриваемых объектов.
 
+\pagebreak
 {\defpositions}
 
-1. Методика построения вероятностного пространства для тандема систем с немгновенным перемещением требований между ними.
+1. Методика построения вероятностного пространства для тандема систем обслуживания по циклическому алгоритму с продлением и задержкой требований между ними.
 
-2. Методика нахождения условий существования стационарного режима в системах управления потоками неоднородных требований с циклическим алгоритмом и алгоритмом с продлением.
+2. Методика определения условий существования стационарного режима в системах управления неординарными пуассоновскими потоками требований с использованием циклического алгоритма и алгоритма с продлением.
 
-3. Методика определения момента достижения управляемой системой обслуживания квазистационарного режима.
-
-
+3. Методика определения фазы квазистационарного режима  управляющей системы обслуживания тандемного типа.
 
 
 
-{\probation} Достоверность полученных результатов обеспечивается строгим применением используемого математического аппарата, проведением статистических и численных исследований. Результаты работы находятся в соответствии с результатами, полученными ранее другими авторами при исследовании управляющих систем обслуживания.
+
+
+{\probation} Достоверность полученных результатов обеспечивается строгим применением используемого математического аппарата, проведением и сравнением статистических и численных исследований. Результаты работы находятся в соответствии с результатами, полученными ранее другими авторами при исследовании управляющих систем обслуживания.
 
 Основные результаты диссертации докладывались и обсуждались на следующих  конференциях.
 \begin{enumerate}
@@ -73,7 +79,11 @@
 {\passport} Диссертационная работа выполнена в соответствии с паспортом специальности 01.01.09 «Дискретная математика и математическая кибернетика» и включает оригинальные результаты в области дискретной математики и математической кибернетики. 
 
 Исследование, приведенное в работе, соответствует следующим
-разделам паспорта специальности. Пункт~4 (Математическая теория исследования операций и теория игр): построена и изучена математическая модель для новой системы массового обслуживания методами теории исследования операций. Пункт~2 (Теория управляющих систем): математическая модель исследуемой системы представлена в виде абстрактной управляющей системы Ляпунова--Яблонского и построена на базе принципов кибернетического подхода.
+разделам паспорта специальности: 
+\begin{itemize}
+    \item пункт~4 (Математическая теория исследования операций и теория игр)~--- построена и изучена математическая модель для новой системы массового обслуживания методами теории исследования операций;
+    \item пункт~2 (Теория управляющих систем)~--- математическая модель исследуемой системы представлена в виде абстрактной управляющей системы Ляпунова--Яблонского и построена на базе принципов кибернетического подхода.
+\end{itemize} 
 
 \ifnumequal{\value{bibliosel}}{0}{% Встроенная реализация с загрузкой файла через движок bibtex8
     \publications\ Основные результаты по теме диссертации изложены в XX печатных изданиях, 
@@ -89,13 +99,10 @@
         %\publications\ Основные результаты по теме диссертации изложены в \arabic{citeauthor} печатных изданиях\nocite{bib1,bib2}, 
         %\arabic{citeauthorvak} из которых изданы в журналах, рекомендованных ВАК\cite{vestnikUNN,vestnikVGAVT1,vestnikVGAVT2,vestnikTGU}, 
         %\nocite{DCCN2010,Minsk2011,Novgorod2011,Novosibirsk2011,DCCN2013,Kazan,Minsk2015,RachinskayaStatistics,Dm2015,DCCN2015,Dm2016,Penza2017,DCCN2017,Tomsk2017,Soloviev2017}\arabic{citeauthorconf} "--- в тезисах докладов  \cite{DCCN2010,Minsk2011,Novgorod2011,Novosibirsk2011,DCCN2013,Kazan,Minsk2015,RachinskayaStatistics,Dm2015,DCCN2015,Dm2016,Penza2017,DCCN2017,Tomsk2017,Soloviev2017}.
-        	\publications\ Основные результаты по теме диссертации изложены в 10 работах, 
-	1 из них "--- в журнале, рекомендованном ВАК для защиты по специальности 01.01.09,
-	2 "--- в библиографической базе Scopus, 2 "--- в библиографической базе Web of Science, 1 "--- в журнале, рекомендованном ВАК для защиты по смежной специальности 05.13.01, 9 "--- в библиографической базе РИНЦ,
-	8 "--- в тезисах докладов. 
-	%  \end{refsection}
-
+        	\publications\ Основные результаты по теме диссертации изложены в 17 работах, 
+	5 из них "--- в журналах, рекомендованных ВАК (\cite{vestnikTvGU,UBS,vestnikVGAVT2, vestnikSGU, MKSM2019}),
+	2 "--- в библиографической базе Scopus, 2 "--- в библиографической базе Web of Science, 13 "--- в библиографической базе РИНЦ (\cite{ Dm2015, Penza2017, Tomsk2017, ITMM2019, DCCN2016:3, DCCN2016:1, DCCN2016:2,  DCCN2017, vestnikTvGU, vestnikVGAVT2, UBS, vestnikSGU, MKSM2019}),
+	10 "--- в тезисах докладов (\cite{Minsk2015, Dm2015, DCCN2015, DCCN2016:3, Penza2017, Tomsk2017, DCCN2017, ORM2018, ITMM2019, MKSM2019}). Получено $1$ свидетельство о государственной регистрации программы для ЭВМ~\cite{RID}.
 }
 
-
-
+% \underline{\textbf{Объем и структура работы.}} Диссертация состоит из~введения, четырех глав, заключения и~приложения. Полный объем диссертации \textbf{ХХХ}~страниц текста с~\textbf{ХХ}~рисунками и~5~таблицами. Список литературы содержит \textbf{ХХX}~наименование.
