--- a/Dissertation/Work_structured/common/data.tex
+++ b/Dissertation/Work_structured/common/data.tex
@@ -26,7 +26,7 @@
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {\todo{Нижний Новгород}}
 \newcommand{\thesisYear}               % Диссертация, год защиты
-{\todo{2019}}
+{\todo{2020}}
 \newcommand{\thesisOrganization}       % Диссертация, организация
 {\todo{Федеральное государственное автономное образовательное учреждение высшего образования «Национальный исследовательский Нижегородский государственный университет им.~Н.И.~Лобачевского»}}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
@@ -80,7 +80,10 @@
 
 \newcommand{\leadingOrganizationTitle} % Ведущая организация, дополнительные строки
 %{\todo{Федеральное государственное автономное образовательное учреждение высшего образования <<Российский университет дружбы народов>>}}
-{\todo{Кафедра прикладной информатики и теории вероятностей факультета физико-математических и естественных наук ФГАОУ ВО <<Российский университет дружбы народов>>}}
+{\todo{
+	Кафедра теории вероятностей и математической статистики института прикладной математики и компьютерных наук ФГАОУ ВО
+<<Национальный исследовательский Томский государственный университет>>
+}}
 
 \newcommand{\defenseDate}              % Защита, дата
 {\todo{20 апреля  2019~г.~в~14:40 часов}}
@@ -94,7 +97,7 @@
 {\todo{+7~(0000)~00-00-00}}
 
 \newcommand{\defenseSecretaryFio}      % Секретарь диссертационного совета, ФИО
-{\todo{Кротов Николай Владимирович}}
+{\todo{Бирюков Руслан Сергеевич}}
 \newcommand{\defenseSecretaryRegalia}  % Секретарь диссертационного совета, регалии
 {\todo{кандидат физико-математических наук}}            % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
 
