--- a/Dissertation/Work_structured/Dissertation/part1.tex
+++ b/Dissertation/Work_structured/Dissertation/part1.tex
@@ -22,6 +22,8 @@ f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z^{\nu},  \quad j\in \{1, 3\}.
 \end{equation}
 Функцию $f_j(\cdot)$,  $j\in \{1, 3\}$,  будем предполагать аналитической при всех $z\in \mathbb{C}$ таких,  что $|z|\hm<(1+\varepsilon)$,  $\varepsilon>0$. Величина $p_{\nu}^{(j)}$ задает  вероятность того,  что по потоку $\Pi_j$ число требований в группе равно $\nu$. После обслуживания требования потока $\Pi_1$ повторно поступают в систему для обслуживания,  формируя при этом поток $\Pi_4$. Затем,  обслуженные требования потока $\Pi_4$ поступают на еще одно повторное обслуживание,  создавая при этом поток $\Pi_2$. Потоки $\Pi_2$ и $\Pi_3$ являются конфликтными,  что означает запрет на одновременное обслуживание требований этих потоков и,  следовательно,  исследование системы не может быть сведено к задаче с меньшим числом потоков. 
 
+Входящие потоки требований $\Pi_1$ и $\Pi_3$, формируюемые внешней средой, и соответствующие им очереди $O_1$ и $O_3$ будем называть первичными. Потоки требований $\Pi_2$ и $\Pi_4$, формируюемые в результате обслуживания требований потока $\Pi_1$, как и соответствующие им очереди $O_2$ и $O_4$ будем называть промежуточными.
+
 Обслуживающее устройство в каждый момент времени может находиться в одном из множества состояний $\Gamma=\{\Gamma^{(k, r)} \colon k=\overline{0, d}; r=\overline{1, n_k}\}$ с заданными натуральными числами $d$,  $n_0$,  $n_1$,  $\ldots$,  $n_d$. В каждом состоянии $\Gamma^{(k, r)}$ обслуживающее устройство находится в течение времени $T^{(k, r)}$. Выделим из множества $\Gamma$ подножества $\Gamma^{\mathrm{I}}$,  $\Gamma^{\mathrm{II}}$, 
 $\Gamma^{\mathrm{III}}$ и $\Gamma^{\mathrm{IV}}$ следующим образом. В состоянии $\gamma \in \Gamma^{\mathrm{I}}$ обслуживаются только требования из очередей $O_1$,  $O_2$ и $O_4$.
 В состоянии $\gamma \in \Gamma^{\mathrm{II}}$ обслуживаются только требования из очередей $O_2$ и $O_4$.
@@ -319,8 +321,8 @@ $$
 \end{multline*}
 и,   учитывая выражение \eqref{probabilitiesTwo},   получим
 \begin{multline}
-\Pr\biggl( \Bigl\{ \omega \colon \omega_{j,  i} = a_j,   j=\overline{1,  3}; \Gamma_i=\Gamma^{(k_i,  r_i)},   \varkappa_i=x^i\Bigr\} \cap \\ \cap \bigcap_{t=0}^{i-1}\Bigl\{\omega\colon \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\Bigr\}\biggr) 
-=\varphi_1(a_1,  h_T(\Gamma_i,  x_{3,  i})) \times \psi(a_2,  x_{4,  i},   p_{\tilde{k}_i,  \tilde{r}_i}) \times \\ \times  \varphi_3(a_3,  h_T(\Gamma_i,  x_{3,  i}))
+\Pr\biggl( \Bigl\{ \omega \colon \omega_{j,  i} = a_j,   j=\overline{1,  3}; \Gamma_i=\Gamma^{(k_i,  r_i)},   \varkappa_i=x^i\Bigr\} \cap\displaybreak[0] \\ \cap \bigcap_{t=0}^{i-1}\Bigl\{\omega\colon \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\Bigr\}\biggr) 
+=\varphi_1(a_1,  h_T(\Gamma_i,  x_{3,  i})) \times \psi(a_2,  x_{4,  i},   p_{\tilde{k}_i,  \tilde{r}_i}) \times\displaybreak[0] \\ \times  \varphi_3(a_3,  h_T(\Gamma_i,  x_{3,  i}))
 \times  \sum_{\substack{\omega_0,   \omega_1,  \ldots,   \omega_{i-1} \colon \\ \Gamma_t=\Gamma^{(k_t,  r_t)},  \,   \varkappa_t=x^t,  \\ t=\overline{0,  i}}} P_0(\omega_0)\times P_1(\omega_0;\{\omega_1\})\times \ldots \\ \ldots \times P_{i-1}(\omega_0,  \omega_1,  \ldots,   \omega_{i-2};\{\omega_{i-1}\}).
 \label{Construction:4}
 \end{multline}
@@ -346,11 +348,11 @@ $$
 \end{multline}
 \end{corollary}
 \begin{proof}
-Действительно,   из формулы \eqref{ProbablititiesToProve} cледует,   что вероятность,   стоящая в левой части равенства \eqref{eta:xi:forgetProperty},  равна величине $\varphi(a,  k_i,  r_i,  x^i)\times \zeta(b,  k_i,  r_i,  x^i)$,   зависящей только от значения $(\Gamma^{(k_i,  r_i)},  x^i)$ пары $(\Gamma_i,  \varkappa_i)$ и не зависящей от значений остальных пар $(\Gamma_t,  \varkappa_t)_{0\leqslant t \leqslant i-1}$. 
+Действительно,   из формулы \eqref{ProbablititiesToProve} cледует,   что вероятность,   стоящая в левой части равенства \eqref{eta:xi:forgetProperty},  равна величине $\varphi(a,  k_i,  r_i,  x^i)\times \zeta(b,  k_i,  r_i,  x^i)$,   зависящей только от значения $(\Gamma^{(k_i,  r_i)},  x^i)$ пары $(\Gamma_i,  \varkappa_i)$ и не зависящей от значений остальных пар $(\Gamma_t,  \varkappa_t)$, $0\leqslant t \leqslant i-1$. 
 
 Использовав формулу полной вероятности,   получим для правой части равенства \eqref{eta:xi:forgetProperty}:
 \begin{multline*}
- \Pr \biggl(\{ \omega \colon \eta_i = a,  \xi_i=b\} \left|\{\omega\colon \Gamma_i=\Gamma^{(k_i,  r_i)},   \varkappa_i=x^i\}\right.\biggr) = \\ = \sum_{t=0}^{i-1}\sum_{\Gamma_t\in \Gamma,   \varkappa_t \in Z^4_+}\Pr \biggl(\{ \omega \colon \eta_i = a,   \xi_i=b\} \biggl|\bigcap_{t=0}^{i}\{\omega\colon \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\}\biggr) \times \\ \times \Pr \biggl(\bigcap_{t=0}^{i-1}\{ \omega \colon  \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\}\biggr) = 
+ \Pr \biggl(\{ \omega \colon \eta_i = a,  \xi_i=b\} \left|\{\omega\colon \Gamma_i=\Gamma^{(k_i,  r_i)},   \varkappa_i=x^i\}\right.\biggr) = \\ = \sum_{t=0}^{i-1}\sum_{\Gamma_t\in \Gamma,   \varkappa_t \in Z^4_+}\Pr \biggl(\{ \omega \colon \eta_i = a,   \xi_i=b\} \biggl|\bigcap_{t=0}^{i}\{\omega\colon \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\}\biggr) \times\displaybreak[0] \\ \times \Pr \biggl(\bigcap_{t=0}^{i-1}\{ \omega \colon  \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\}\biggr) = 
  \varphi(a,  k_i,  r_i,  x^i)\times \zeta(b,  k_i,  r_i,  x^i) \times \\ \times \sum_{t=0}^{i-1}\sum_{\Gamma_t\in \Gamma,   \varkappa_t \in Z^4_+}\Pr \biggl(\bigcap_{t=0}^{i-1}\{ \omega \colon  \Gamma_t=\Gamma^{(k_t,   r_t)},   \varkappa_t=x^t\}\biggr) =\varphi(a,  k_i,  r_i,  x^i)\times \zeta(b,  k_i,  r_i,  x^i).
 \end{multline*}
 Поскольку левая часть выражения \eqref{eta:xi:forgetProperty} равна правой,   то следствие доказано. 
@@ -379,7 +381,7 @@ $$
 Запишем по формуле полной вероятности:
 \begin{multline*}
 \Pr (\{ \omega \colon \varkappa_{2,  i+1} = x_{2,  i+1}\} |\cap_{t=0}^{i}\{\omega\colon \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\}) = \\
-= \sum_{a,  b\in \mathbb{Z}_+^4} \Pr (\{ \omega \colon \eta_i=a,   \xi_i=b\} |\cap_{t=0}^{i}\{\omega\colon \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\}) \times \\
+= \sum_{a,  b\in \mathbb{Z}_+^4} \Pr (\{ \omega \colon \eta_i=a,   \xi_i=b\} |\cap_{t=0}^{i}\{\omega\colon \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\}) \times\displaybreak[0] \\
 \times \Pr (\{ \omega \colon \varkappa_{2,  i+1} = x_{2,  i+1}\} |\{\omega\colon \eta_i=a,   \xi_i=b\}\cap \cap_{t=0}^{i}\{\omega\colon \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\}).
 \end{multline*}
 Поскольку для величин $\varkappa_{2,  i+1}$,  $\eta_i$ и $\xi_i$ история до момента времени $\tau_i$ значения не имеет (см. формулы \eqref{queuesFunc} и \eqref{eta:xi:forgetProperty}),  то
@@ -409,7 +411,7 @@ $$
 и перегруппируем множители:
 \begin{multline*}
 \Pr (\{ \omega \colon \varkappa_{2,  i+1} = x_{2,  i+1}\} |\mathop{\cap}\limits_{t=0}^{i}\{\omega\colon \Gamma_t=\Gamma^{(k_t,  r_t)},   \varkappa_t=x^t\}) =\\
-= \sum_{a_2,  b_2\in \mathbb{Z}_+}\psi(a_2,  x_{4,  i},   p_{k_{i+1},  r_{i+1}})  \delta_{b_2,  \ell(k_{i+1},  r_{i+1},  2)}   \delta_{x_{2,  i+1},  \max\{0,  x_{2,  i}+a_2-b_2\}} \times \\ 
+= \sum_{a_2,  b_2\in \mathbb{Z}_+}\psi(a_2,  x_{4,  i},   p_{k_{i+1},  r_{i+1}})  \delta_{b_2,  \ell(k_{i+1},  r_{i+1},  2)}   \delta_{x_{2,  i+1},  \max\{0,  x_{2,  i}+a_2-b_2\}} \times\displaybreak[0] \\ 
 \times \sum_{a_3\in \mathbb{Z}_+} \varphi_3(a_3,  h_T(\Gamma^{(k_i,  r_i)},  x_{3,  i})) \times \sum_{a_1\in \mathbb{Z}_+} \varphi_1(a_1,  h_T(\Gamma^{(k_i,  r_i)},  x_{3,  i})) \times \\ 
 \times \sum_{a_4\in \mathbb{Z}_+} \delta_{a_4,  \min{\{\ell(k_{i+1},  r_{i+1},  1),   x_{1,  i}+a_1}\}} \sum_{b_1\in \mathbb{Z}_+} \delta_{b_1,  \ell(k_{i+1},  r_{i+1},  1)} \sum_{b_3\in \mathbb{Z}_+} \delta_{b_3,  \ell(k_{i+1},  r_{i+1},  3)} 
  \sum_{b_4\in \mathbb{Z}_+}  \delta_{b_4,  x_{4,  i}}.
@@ -457,11 +459,11 @@ $$
 \end{multline*}
 и,  раскрывая по определению $\varphi(\cdot,  \cdot,  \cdot,  \cdot)$ и $\zeta(\cdot,  \cdot,  \cdot,  \cdot)$,  получим
 \begin{multline*}
-\Pr (\{ \omega \colon \varkappa_{3, i+1} = x_{3, i+1}\} |\mathop{\cap}\limits_{t=0}^{i}\{\omega\colon \Gamma_t=\Gamma^{(k_t, r_t)},  \varkappa_t=x^t\})=\\= \sum_{a_3, b_3\in \mathbb{Z}_+} \varphi_3(a_3, h_T(\Gamma^{(k_i, r_i)}, x_{3, i})) \delta_{b_3, \ell(k_{i+1}, r_{i+1}, 3)} \delta_{x_{3, i+1}, \max\{0, x_{3, i}+a_3-b_3\}} \times \\
+\Pr (\{ \omega \colon \varkappa_{3, i+1} = x_{3, i+1}\} |\mathop{\cap}\limits_{t=0}^{i}\{\omega\colon \Gamma_t=\Gamma^{(k_t, r_t)},  \varkappa_t=x^t\})=\\= \sum_{a_3, b_3\in \mathbb{Z}_+} \varphi_3(a_3, h_T(\Gamma^{(k_i, r_i)}, x_{3, i})) \delta_{b_3, \ell(k_{i+1}, r_{i+1}, 3)} \delta_{x_{3, i+1}, \max\{0, x_{3, i}+a_3-b_3\}} \times\displaybreak[0] \\
 \times
 \sum_{a_2\in \mathbb{Z}_+} \psi(a_2, x_{4, i},  p_{k_{i+1}, r_{i+1}}) 
-\times \sum_{a_1\in \mathbb{Z}_+}  \varphi_1(a_1, h_T(\Gamma^{(k_i, r_i)}, x_{3, i})) \sum_{a_4\in \mathbb{Z}_+}  \times \\ \times \delta_{a_4, \min{\{\ell(k_{i+1}, r_{i+1}, 1),  x_{1, i}+a_1}\}} \times  \sum_{b_1\in \mathbb{Z}_+}  \delta_{b_1, \ell(k_{i+1}, r_{i+1}, 1)} 
-\sum_{b_2\in \mathbb{Z}_+}  \delta_{b_2, \ell(k_{i+1}, r_{i+1}, 2)} \times \\
+\times \sum_{a_1\in \mathbb{Z}_+}  \varphi_1(a_1, h_T(\Gamma^{(k_i, r_i)}, x_{3, i})) \sum_{a_4\in \mathbb{Z}_+}  \times\displaybreak[0] \\ \times \delta_{a_4, \min{\{\ell(k_{i+1}, r_{i+1}, 1),  x_{1, i}+a_1}\}} \times  \sum_{b_1\in \mathbb{Z}_+}  \delta_{b_1, \ell(k_{i+1}, r_{i+1}, 1)} 
+\sum_{b_2\in \mathbb{Z}_+}  \delta_{b_2, \ell(k_{i+1}, r_{i+1}, 2)} \times\displaybreak[0] \\
 \times  \sum_{b_4\in \mathbb{Z}_+}\delta_{b_4, x_{4, i}} =  \sum_{a_3\in \mathbb{Z}_+} \varphi_3(a_3, h_T(\Gamma^{(k_i, r_i)}, x_3))  \delta_{x_{3, i+1}, \max\{0, x_{3, i}+a_3-\ell(k_{i+1}, r_{i+1}, 3)\}}.
 \end{multline*}
 По аналогии с передыдущей леммой
@@ -533,4 +535,5 @@ $$
 Следствие доказано.
 \end{proof}
 
+\pagebreak
 Таким образом,  кибернетический подход позволил построить математическую модель управляющей системы обслуживания в виде последовательности случайных величин и случайных элементов,  конструктивно заданных на некотором вероятностном пространстве. Выберем для дальнейшего исследования состояния обслуживающего устройства и длины всех очередей.
